Fixing alignment of mismanagement positions

--- a/css/custom.css
+++ b/css/custom.css
@@ -63,7 +63,7 @@ div#login-div-close-div {
 }
 .hasher {
     background-color: #f2f2f2;
-    padding: 7px 7px 10px 7px;
+    padding: 7px 7px 8px 7px;
     margin: 5px;
     border: 1px solid #c0c0c0;
     display: inline-block;
